code/python/UniversalScreening/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Universal Screening client library for Python

[![API Version](https://img.shields.io/badge/api-v2.0.2-blue)](https://developer.factset.com/api-catalog/universal-screening-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.UniversalScreening/2.0.0)](https://pypi.org/project/fds.sdk.UniversalScreening/v/2.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Through the Universal Screening API, you can access the power of FactSet's Universal Screening Application.
Calculate and return the results of your saved Universal Screens.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.2
- SDK version: 2.0.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.UniversalScreening==2.0.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.UniversalScreening==2.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.UniversalScreening
from fds.sdk.UniversalScreening.api import job_management_api
from fds.sdk.UniversalScreening.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.UniversalScreening.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.UniversalScreening.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.UniversalScreening.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = job_management_api.JobManagementApi(api_client)
    id = "123e4567-e89b-12d3-a456-426655440000" # str | Unique identifier for a job. \"Job\" refers to a screen calculation or archival.

    try:
        # example passing only required values which don't have defaults set
        api_instance.delete_active_job(id)

    except fds.sdk.UniversalScreening.ApiException as e:
        print("Exception when calling JobManagementApi->delete_active_job: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     api_response, http_status_code, response_headers = api_instance.delete_active_job_with_http_info(id)

    # except fds.sdk.UniversalScreening.ApiException as e:
    #     print("Exception when calling JobManagementApi->delete_active_job: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     async_result = api_instance.delete_active_job_async(id)
    # except fds.sdk.UniversalScreening.ApiException as e:
    #     print("Exception when calling JobManagementApi->delete_active_job: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     async_result = api_instance.delete_active_job_with_http_info_async(id)
    # except fds.sdk.UniversalScreening.ApiException as e:
    #     print("Exception when calling JobManagementApi->delete_active_job: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.UniversalScreening

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.UniversalScreening.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.UniversalScreening

configuration = fds.sdk.UniversalScreening.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.UniversalScreening

configuration = fds.sdk.UniversalScreening.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.UniversalScreening

configuration = fds.sdk.UniversalScreening.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/universal-screening/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*JobManagementApi* | [**delete_active_job**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/JobManagementApi.md#delete_active_job) | **DELETE** /job/{id} | 
*JobManagementApi* | [**delete_all_active_jobs**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/JobManagementApi.md#delete_all_active_jobs) | **DELETE** /jobs | 
*JobManagementApi* | [**get_all_active_jobs**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/JobManagementApi.md#get_all_active_jobs) | **GET** /jobs | 
*ScreeningOperationsApi* | [**get_calculate_results**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreeningOperationsApi.md#get_calculate_results) | **GET** /job/{id} | 
*ScreeningOperationsApi* | [**get_export_results**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreeningOperationsApi.md#get_export_results) | **GET** /job/{id}/export | 
*ScreeningOperationsApi* | [**poll_calculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreeningOperationsApi.md#poll_calculate) | **GET** /job/{id}/status | 
*ScreeningOperationsApi* | [**submit_archive_ofdb**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreeningOperationsApi.md#submit_archive_ofdb) | **POST** /job/archive | 
*ScreeningOperationsApi* | [**submit_calculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreeningOperationsApi.md#submit_calculate) | **POST** /job/calculate | 
*ScreeningOperationsApi* | [**submit_export**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreeningOperationsApi.md#submit_export) | **POST** /job/export | 


## Documentation For Models

 - [ActiveJobIDs](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ActiveJobIDs.md)
 - [ActiveJobsData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ActiveJobsData.md)
 - [CalculateMetadata](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/CalculateMetadata.md)
 - [DelimitedOptions](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/DelimitedOptions.md)
 - [ErrorArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ErrorArray.md)
 - [ErrorCode](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ErrorCode.md)
 - [ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ErrorObject.md)
 - [ErrorObjectSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ErrorObjectSource.md)
 - [ExcelOptions](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ExcelOptions.md)
 - [GroupingInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/GroupingInfo.md)
 - [PaginatedCalculationResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/PaginatedCalculationResponse.md)
 - [PaginationResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/PaginationResponse.md)
 - [PdfOptions](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/PdfOptions.md)
 - [ResourceStatusResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ResourceStatusResponse.md)
 - [ResourceStatusResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ResourceStatusResponseData.md)
 - [ResultsMetadata](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ResultsMetadata.md)
 - [ScreenArchiveOFDBParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreenArchiveOFDBParameters.md)
 - [ScreenArchiveOFDBParametersData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreenArchiveOFDBParametersData.md)
 - [ScreenArchiveOFDBParametersDataArchiveOptions](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreenArchiveOFDBParametersDataArchiveOptions.md)
 - [ScreenCalcParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreenCalcParameters.md)
 - [ScreenCalcParametersData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreenCalcParametersData.md)
 - [ScreenExportParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreenExportParameters.md)
 - [ScreenExportParametersData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/ScreenExportParametersData.md)
 - [SubmitExportResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/SubmitExportResponse.md)
 - [SubmitExportResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/UniversalScreening/v2/docs/SubmitExportResponseData.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.UniversalScreening.apis and fds.sdk.UniversalScreening.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.UniversalScreening.api.default_api import DefaultApi`
- `from fds.sdk.UniversalScreening.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.UniversalScreening
from fds.sdk.UniversalScreening.apis import *
from fds.sdk.UniversalScreening.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

